@@ -1,3 +1,10 @@
+2001-10-17  Dancer Vesperman  <dancer@users.sourceforge.net>
+
+	* actorio.cc: Cast changeover
+	* gamedat.cc: Cast changeover
+	* xdrag.cc: Cast changeover
+	* gamewin.cc: Cast changeover
+
 2001-10-16  Jeff Freedman  <jeff@amy.nerble.net>
 
 	* palette.cc (Palette): find_color() shouldn't look at the
